--- a/src/app/(frontend)/globals.css
+++ b/src/app/(frontend)/globals.css
@@ -11,6 +11,7 @@
   h6 {
     font-size: auto;
     font-weight: auto;
+    font-family: 'Urbanist', sans-serif;
   }
 
   :root {
@@ -95,9 +96,69 @@
 
 html {
   opacity: 0;
+  /* font-family: 'Urbanist', sans-serif; */
 }
 
 html[data-theme='dark'],
 html[data-theme='light'] {
   opacity: initial;
+}
+
+@keyframes slide-out-to-top {
+  from {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  to {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+}
+
+@keyframes slide-out-to-left {
+  from {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  to {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+}
+
+@keyframes slide-in-from-top {
+  from {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes slide-in-from-left {
+  from {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+.animate-in {
+  animation: slide-in-from-top 0.3s ease-out;
+}
+
+.animate-in-left {
+  animation: slide-in-from-left 0.3s ease-out;
+}
+
+.animate-out {
+  animation: slide-out-to-top 0.3s ease-out;
+}
+
+.animate-out-left {
+  animation: slide-out-to-left 0.3s ease-out;
 }
