--- a/src/app/(frontend)/globals.css
+++ b/src/app/(frontend)/globals.css
@@ -92,6 +92,7 @@
   body {
     @apply bg-background text-foreground;
     font-family: var(--font-lufga), sans-serif;
+    font-weight: 300;
   }
 }
 
